--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ dotenv~=0.9.9
 python-dotenv~=1.1.1
 django-import-export~=4.3.9
 psycopg2-binary==2.9.10
+django-smart-selects==1.7.2
+django-import-export
+djangorestframework
